--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,8 +9,9 @@
 				"-fdiagnostics-color=always",
 				"-g",
 				"${file}",
+				
 				"-o",
-				"${fileDirname}\\${fileBasenameNoExtension}.exe"
+				"${fileDirname}\\output\\${fileBasenameNoExtension}.exe"
 			],
 			"options": {
 				"cwd": "${fileDirname}"
